<resources>
    <string name="app_name">Challenge_Personal_Badhrul Salman</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_screen_4">Go To Screen 4</string>
    <string name="screen_3">Screen 3</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="usia_anda_bernilai_ganjil_genap">Usia Anda, Bernilai Ganjil/Genap</string>
    <string name="alamat_anda">Alamat Anda</string>
    <string name="pekerjaan_anda">Pekerjaan Anda</string>
    <string name="masukkan_pekerjaan">Masukkan Pekerjaan</string>
    <string name="back_to_screen_3">Back To Screen 3</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="masukkan_usia">Masukkan Usia</string>
    <string name="screen_4">Screen 4</string>
    <string name="screen_1">Screen 1</string>
    <string name="go_to_screen_2">Go To Screen 2</string>
    <string name="screen_2">Screen 2</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="go_to_screen_3">Go To Screen 3</string>
</resources>