<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen2Fragment">

    <TextView
        android:id="@+id/screen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_2"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        android:hint="@string/masukkan_nama"
        android:layout_marginTop="270dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnScreen2"
        android:layout_width="210dp"
        android:layout_height="65dp"
        android:layout_marginBottom="136dp"
        android:text="@string/go_to_screen_3"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:backgroundTint="@color/blue"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_input_layout"
        app:layout_constraintVertical_bias="0.086" />
</androidx.constraintlayout.widget.ConstraintLayout>